carousel added on section4

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,13 @@ body {
   font-family: "Montserrat";
 }
 
+h2 {
+  font-family: "Montserrat";
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 700;
+}
+
 /* ################# CLASS ##################### */
 
 .container-fluid {
@@ -91,4 +98,31 @@ body {
 
 .feat3 {
   text-align: center;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+/* #### PRESS #####  */
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
 }
