--- a/css/styles.css
+++ b/css/styles.css
@@ -146,3 +146,47 @@ h2 {
 .pricing-column {
   padding: 3% 2%;
 }
+
+/* ####### CTA ############ */
+
+#cta {
+  background-color: #ff4c68;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.cta-head {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 4rem;
+  color: #fff;
+}
+
+/* ############## FOOTER ################ */
+
+#footer {
+  background-color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.footer-p {
+  margin-top: 16px;
+  font-size: 1.2rem;
+  color: grey;
+}
+
+.fa-foot {
+  margin: 0 1%;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
